--- a/Thesis/Masterarbeit.tex
+++ b/Thesis/Masterarbeit.tex
@@ -23,6 +23,7 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{mathtools}
+\usepackage[titlenumbered,ruled]{algorithm2e}
 
 
 \lstset{captionpos=b,frame=single}
