--- a/Thesis/content/5_experimentalsetup.tex
+++ b/Thesis/content/5_experimentalsetup.tex
@@ -1,15 +1,15 @@
-\chapter{Related works}
-\label{chap:related works}
+\chapter{Experimental setup}
+\label{chap:Experimental setup}
 
 
-\section{Classical machine learning based approaches}
-\label{sec:Classical machine learning based approaches}
+\section{Datasets}
+\label{sec:datasets}
+
+\section{Parameter tuning}
+\label{sec:parametertuning}
 
 
 
-
-\section{Autoencoder-based anomaly detection approaches}
-\label{sec:Autoencoder-based anomaly detection approaches}
 
 
 
