--- a/Thesis/Masterarbeit.tex
+++ b/Thesis/Masterarbeit.tex
@@ -25,6 +25,7 @@
 \usepackage{mathtools}
 \usepackage{multirow}
 \usepackage[titlenumbered,ruled]{algorithm2e}
+\usepackage{newtxtext,newtxmath}
 
 
 \lstset{captionpos=b,frame=single}
