--- a/Thesis/content/6_experiementresults.tex
+++ b/Thesis/content/6_experiementresults.tex
@@ -4,19 +4,38 @@
 
 \section{Grid search}
 \label{sec:gridsearch}
+best parameter for each dataset\\
 
+Epoches\\
+batch size\\
+window length\\
+hidden layer size
 
 \section{Anomaly detection performance}
 \label{sec:performance}
 
-
+AUC for each dataset\\
+False alarm count, miss alarm count
 
 \section{Retraining}
 \label{sec:retraining}
 
-\subsection{Reaction of concept drift}
+\subsection{Power demand example}
+\label{sec:example}
 
-\subsection{Comparison: with and without retraining}
+\subsection{Comparasion: with and without retraining}
+\label{sec: compare}
+
+performance and reconstruction error\\
+what data used for retraining
+
+
+\subsection{Reaction of concept drift and distribution changes}
+\label{sec:reaction}
+observation of model perfermance around positions of concept drift and distribution changes 
+
+\subsection{Running time analysis}
+\label{sec:time}
 
 
 
