--- a/Thesis/referenzen.bib
+++ b/Thesis/referenzen.bib
@@ -64,6 +64,11 @@
 	year = {2013}
 }
 
+@article{tan,
+	author={Swee Chuan Tan and Kai Ming Ting and Tony Fei Liu},
+	title = {Fast Anomaly Detection for Streaming Data},
+	year = {2011}
+}
 
 
 
