--- a/Thesis/Masterarbeit.tex
+++ b/Thesis/Masterarbeit.tex
@@ -28,6 +28,7 @@
 \usepackage{newtxtext,newtxmath}
 
 
+
 \lstset{captionpos=b,frame=single}
 \usepackage[german]{fancyref}
 %% for fancy refereing to listings.
@@ -120,8 +121,8 @@
 \listoftables
 
 %CODE 
-\renewcommand*{\lstlistlistingname}{Codeverzeichniss}
-\lstlistoflistings
+%\renewcommand*{\lstlistlistingname}{Codeverzeichniss}
+%\lstlistoflistings
 
 
 \mainmatter
