--- a/Thesis/content/3_prelimitaries.tex
+++ b/Thesis/content/3_prelimitaries.tex
@@ -1,5 +1,5 @@
 \chapter{Preliminaries}
-\label{Preliminaries}
+\label{chap:Preliminaries}
 
 \section{Definition of stream}
 \label{sec:Definition of stream}
@@ -23,8 +23,8 @@ S=\{..., B^{(i)},B^{(i+MB)}, B^{(i+2MB)},...\}
 
 
 
-\section{Defination of anomlaies}
-\label{sec:Defination of anomalies}
+\section{Definition of anomlaies}
+\label{sec:Definition of anomalies}
 
 \textbf{Pointwise}: A data point (instance) is anomalous if this point is distant from other observations according to some specific measurement metrics. This is used in fine-grained anomaly detection tasks, that need to find out every single anomalous instance, e.g. credit card fraud detection, spam email detection.\\
 
