--- a/Thesis/title.tex
+++ b/Thesis/title.tex
@@ -11,7 +11,7 @@
 %
 % Logos
 %
-\includegraphics[height=1cm]{logo_dcsec} \hfill
+\hfill
 \includegraphics[height=1cm]{logo_luh}
 
 \vspace{-3mm}
@@ -24,9 +24,9 @@
 
 Gottfried Wilhelm Leibniz Universität Hannover
 
-Institut für Verteilte Systeme
+Fakultät für Elektrotechnik und Informatik
 
-Distributed Computing \& Security Group
+Institut für Verteilte Systeme
 
 \vspace{4.0cm}
 
