--- a/Thesis/referenzen.bib
+++ b/Thesis/referenzen.bib
@@ -70,8 +70,17 @@
 	year = {2011}
 }
 
+@article{cui,
+	author={Hongyin Cui},
+	title = {Online Outlier Detection Over Data Streams},
+	year = {2002}
+}
 
-
+@article{onlinelof,
+	author={Xiaohong Tang and Chen Li},
+	title = {The Stream Detection Based on Local Outlier Factor},
+	year = {2015}
+}
 
 
 
