--- a/Thesis/content/3_prelimitaries.tex
+++ b/Thesis/content/3_prelimitaries.tex
@@ -4,22 +4,21 @@
 \section{Definition of stream}
 \label{sec:Definition of stream}
 
-Assume that there are some devices or data warehouse that provide data continuously with a specific velocity V (here we only take about numerical data). An input window is defined as
-\begin{equation} \label{eq:timeseries}
-X^{(i)}=\{x_1^{(i)},x_2^{(i)}, ... , x_T^{(i)}\}
+Assume that a set of devices or data warehouses provide data continuously with a specific velocity V (here we only take about numerical data). A data stream DM is defined as 
+\begin{equation} \label{eq:DS}
+DS = \{(x_1,t_1),(x_2,t_2), ... , (x_T,t_T), ...\}
 \end{equation}
-	                        
-	
-where \textbf{$X^{(i)}$} is the \textbf{$i^{th}$} input window with length T, and \textbf{$x_t^{(i)}$} is the \textbf{$t^{th}$} instance in the window, which is a multi-dimensional vector.\\
+where \textbf{$x_T$} is the instance arrived at timestamp \textbf{$t_T$} represented by a multi-dimensional vector.\\
 
-In each single time, a mini-batch B consists of multipe windows is used for model training or testing, and we assume that the data stream is infinity, so that mini-batches can always be accumulated from data stream. The equation \ref{eq:minibatch} is a mini-batch start from window \textbf{$X^{(i)}$} with batch size MB. And equation \ref{eq:stream} describes the data stream.
-\begin{equation} \label{eq:minibatch}
-B^{(i)}=\{X^{(i)},x^{(i+1)}, ... , x^{(i+MB-1)}\}
-\end{equation}
+In order to feed the streaming data to LSTMs, the stream is accumulated to windows and batches as \Fref{fig:stream}. Every T instances are accumulated to a window as a single LSTM input. And MB is the predefine batch size, each batch contains MB windows.
 
-\begin{equation} \label{eq:stream}
-S=\{..., B^{(i)},B^{(i+MB)}, B^{(i+2MB)},...\}
-\end{equation}
+\begin{figure}[h]
+\centering
+\includegraphics[width=12cm, height=3cm]{stream}
+\caption[Data stream]{Data stream}
+\label{fig:stream}
+\end{figure}
+
 
 
 
@@ -85,7 +84,7 @@ Deep LSTM RNNs are built by stacking multiple LSTM layers. Note that LSTM RNNs a
 \label{fig:unfolded}
 \end{figure}
 
-\begin{figure}[hb]
+\begin{figure}[h]
 \centering
 	\begin {subfigure}[t]{0.45\textwidth}
 	\centering
@@ -108,8 +107,16 @@ Deep LSTM RNNs are built by stacking multiple LSTM layers. Note that LSTM RNNs a
 \section{Autoencoders}
 \label{sec:Autoencoders}
 
-An autoencoder is an artificial neural network with symmetrical structure. Normally an autoencoder has at least one hidden layer that consists of less neurons than input and output layers. And the basic aim of autoencoders is to reconstruct its own input and learn a lower dimensional representation (encoding) of input data in the hidden layer. Moreover, the autoencoders are also used for anomaly detection by measuring the reconstruction error between inputs and predictions.
+An autoencoder (\Fref{fig:autoencoder}) is an artificial neural network with symmetrical structure. Normally an autoencoder has at least one hidden layer that consists of less neurons than input and output layers. And the basic aim of autoencoders is to reconstruct its own input and learn a lower dimensional representation (encoding) of input data in the hidden layer. Moreover, the autoencoders are also used for anomaly detection by measuring the reconstruction error between inputs and predictions.
 Normally the component between input layer and hidden layer is called encoder, and the symmetrical component between hidden layer and output layer is called decoder. For input $\chi$, the objective function is to find weight vectors for encoder and decoder to minimize the reconstruction error (\ref{eq:autoencoder}).
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=7cm, height=5cm]{autoencoder}
+\caption[Autoencoder]{Autoencoder}
+\label{fig:autoencoder}
+\end{figure}
+
 \begin{equation} \label{eq:autoencoder}
 \begin{aligned}
 \Phi : &\chi \rightarrow H \\
@@ -120,7 +127,7 @@ Normally the component between input layer and hidden layer is called encoder, a
 
 LSTMs-autoencoder has the same encoder-decoder architecture, while the neurons are LSTM units and connected in the way described in section \ref{sec:LSTMs}. \Fref{fig:encdecad} is a basic LSTMs-based autoencoder architecture with single LSTM layer on both encoder and decoder side. Our incremental LSTMs-autoencoder is based on this structure. The model takes window with length T as input (one instance in each step). The cell state carries sequence information and is passed through LSTM unit over time. When the encoder reaches the last encoder state, namely ET in \Fref{fig:encdecad2}, the cell state is actually the fix length embedding of the input window, and copied to the decoder as initial cell state of decoder, so that the input information is also transferred to the decoder. And the decoder predict the window in reversed order in order to make the optimization problem easier. To be notice is, different from aforementioned deep LSTMs in section \ref{sec:LSTMs}, the encoder outputs at each time step are not directly used as inputs of decoder, while between the encoder and decoder is actually not the same logical connection as stacked LSTMs. Here, the outputs of encoder are ignored, and there are different works contributes to the research of decoder inputs. Cho et al. \cite{phraserepresentation} feeds the input sequence to the decoder for a learning phrase representation task, Malhotra et al. \cite{encdecad} feed to decoder LSTM unit at each time step the prediction of last time step as input, and in a extended work \cite{timenet} they feed the decoder always a constant vector for an anomaly detection task, because the finial cell state already carries all relevant information to represent the input window. In our model, we feed the decoder a constant vector.
  
-\begin{figure}[hb]
+\begin{figure}[h]
 \centering
 	\begin {subfigure}[t]{0.45\textwidth}
 	\centering
@@ -143,4 +150,13 @@ LSTMs-autoencoder has the same encoder-decoder architecture, while the neurons a
 \section{Streaming data generator: Apache Kafka}
 \label{sec:Streaming data generator: Apache Kafka}
 
-We utilize Apache Kafka as the streaming platform. Kafka is a widely used Publish/Subscribe architecture streaming system. It different from classical message queue technique with its fault tolerant, durable and large capacity properties. In the experimental setting, our data source is static databases, Kafka generate real-time data stream pipeline as data source publish records to the specific topic (topic is the data category mechanisms used in Kafka), and furthermore the stream of records will be consumed by different consumers like our analysis model, visualization model etc. This configuration can be easily scaled up to more complicated and demanding real world use cases. Each record in the Kafka stream pipeline is in the form of [Key, Value, Timestamp], where keys are used for positioning and values carry the data record.
+We utilize Apache Kafka as the streaming platform. Kafka is a widely used Publish/Subscribe architecture streaming system. It different from classical message queue technique with its fault tolerant, durable and large capacity properties. Different application or database can publich data to a specific topic of Kafka (topic is the data category mechanisms used in Kafka), and other processors can consume data from this topic (\Fref{fig:kafka}). In our experimental setting, the data source is static databases, Kafka generate real-time data stream pipeline as data source publish records to the experiment topic, and furthermore the stream of records will be consumed by different consumers like our analysis model, visualization model etc. This configuration can be easily scaled up to more complicated and demanding real world use cases. Each record in the Kafka stream pipeline is in the form of [Key, Value, Timestamp], where keys are used for positioning and values carry the data record.
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=5cm, height=5cm]{kafkadiagram}
+\caption[Kafka diagram]{Kafka diagram}
+\label{fig:kafka}
+\end{figure}
+
+
